# Robotica_2025

./: Info.md  README.md
install/: local_setup.sh  setup.sh
install/clase-04/share/clase-04/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/clase_04/lib/clase_04/: publicar  suscribir
install/clase_04/share/clase_04/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/clase_05/lib/clase_05/: simple_publisher  simple_subscriber
install/clase_05/share/clase_05/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/clase_06/lib/clase_06/: temperature_monitor  temperature_sensor
install/clase_06/share/clase_06/: package.bash  package.dsv  package.sh  package.zsh
install/clase_06/share/clase_06/launch/: ejemplo.launch.py  start_temperature_system.launch.py
src/clase_04/: package.xml  setup.cfg  setup.py
src/clase_04/clase_04/: nodo_publicador.py
src/clase_05/: setup.cfg  setup.py
src/clase_05/clase_05/: simple_subscriber.py
src/clase_06/: package.xml  setup.cfg  setup.py
src/clase_06/clase_06/: temperature_sensor.py
src/clase_07/: README.md  package.xml  setup.cfg  setup.py
src/clase_07/clase_07/: dynamic_tf_broadcaster.py  static_tf_broadcaster.py
src/clase_07/launch/: robot_tf_launch.py
src/tp1_robot/: package.xml
src/tp1_robot/config/: diffbot_controllers.yaml
src/tp1_robot/launch/: description.launch.py
src/tp1_robot/tp1_robot/: teleop_twist_keyboard_node.py
src/tp1_robot/urdf/: inertial_macros.xacro  motor.xacro
tp1_robot/: README.md  diffbot.rviz  package.xml  setup.cfg  setup.py
tp1_robot/config/: diffbot_controllers.yaml
tp1_robot/launch/: bringup.launch.py  description.launch.py  diffbot_sim.launch.py  gazebo.launch.py
tp1_robot/meshes/: caster_wheel_support.stl
tp1_robot/rviz/: diffbotdos.rviz
tp1_robot/tp1_robot/: automatic_mover_node.py  inverse_kinematics_node.py  odometry_node.py  teleop_twist_keyboard_node.py  tf_publisher_node.py
tp1_robot/urdf/: diffbot.urdf.xacro  diffbot.xacro  inertial_macros.xacro  motor.xacro
